--- a/scripts/uploader/Dockerfile
+++ b/scripts/uploader/Dockerfile
@@ -1,21 +1,30 @@
-# Dockerfile
-FROM python:3.9-slim
+# # Dockerfile
+# FROM python:3.9-slim
 
-# Установка зависимостей
-# Обновляем pip и устанавливаем requests
-RUN python -m pip install --upgrade pip && \
-    pip install --no-cache-dir requests
+# # Установка зависимостей
+# # Обновляем pip и устанавливаем requests
+# RUN python -m pip install --upgrade pip && \
+#     pip install --no-cache-dir requests
 
-# Создание рабочей директории и копирование скрипта
+# # Создание рабочей директории и копирование скрипта
+# WORKDIR /app
+# COPY upload_reports.py semgrep.json /app 
+
+
+# # # Опционально: Устанавливаем права на выполнение скрипта
+# # RUN chmod +x /app/upload_reports.py
+
+
+# EXPOSE 8080
+# # Установка точки входа (необязательно, но удобно)
+# ENTRYPOINT ["python3"]
+# CMD ["/app/upload_reports.py", "/app/semgrep.json"]
+
+FROM python:3.11-slim
+
 WORKDIR /app
-COPY upload_reports.py semgrep.json /app 
+COPY upload_reports.py .
 
+RUN pip install requests
 
-# # Опционально: Устанавливаем права на выполнение скрипта
-# RUN chmod +x /app/upload_reports.py
-
-
-EXPOSE 8080
-# Установка точки входа (необязательно, но удобно)
-ENTRYPOINT ["python3"]
-CMD ["/app/upload_reports.py", "/app/semgrep.json"]
+ENTRYPOINT ["python", "upload_reports.py"]
